:memo: Se actualiza el README para incluir la versión 0.4 y se añade .metadata al gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,7 @@ dkms.conf
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+.metadata
 
 # Local History for Visual Studio Code
 .history/
